<?xml version="1.0" encoding="utf-8"?>
<GridLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:rowCount="6"
    android:columnCount="2"
    tools:context=".MainActivity"
    android:useDefaultMargins="true"
    >
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="fill_horizontal"
        android:text="@string/tag"
        android:textSize="@dimen/text_size_textField" />

    <com.google.android.material.textfield.TextInputLayout
        android:layout_row="1"
        android:layout_column="0"
        android:layout_columnSpan="2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <EditText
            android:inputType="text"
            android:id="@+id/tagEditText"
            android:hint="@string/hint_tag"
            android:layout_width="match_parent"
            android:layout_height="match_parent" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/activityMainTextBox"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_row="2"
        android:layout_rowSpan="3"
        android:layout_columnSpan="2"
        android:layout_gravity="fill_vertical"
        android:gravity="start"
        android:hint="@string/enter_text"
        android:inputType="text"
        />

    <Button
        android:id="@+id/activityMainButtonText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_columnWeight="1"
        android:layout_row="5"
        android:layout_column="0"
        android:layout_columnSpan="1"
        android:gravity="center"
        android:textSize="@dimen/text_size_button"
        android:text="@string/button_text" />
    <Button
        android:id="@+id/activityMainButtonPicture"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_columnWeight="1"
        android:layout_row="5"
        android:layout_column="1"
        android:layout_columnSpan="1"
        android:gravity="center"
        android:textSize="@dimen/text_size_button"
        android:text="@string/button_picture" />
</GridLayout>