<?xml version="1.0" encoding="utf-8"?>
<GridLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:rowCount="6"
    android:columnCount="2"
    tools:context=".GalleryActivity"
    android:useDefaultMargins="true">

    <TextView
        android:text="@string/tag"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_row="0"
        android:layout_column="0"
        android:layout_columnSpan="2"
        android:layout_gravity="fill_horizontal"
        android:textSize="@dimen/text_size_textField" />

    <ImageView
        android:id="@+id/cameraGallery"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_row="0"
        android:layout_column="1"
        android:layout_gravity="center|end"
        android:layout_marginTop="5dp"
        android:layout_marginEnd="5dp"
        android:onClick="takePhoto"
        android:background="#000000"
        app:srcCompat="@android:drawable/ic_menu_camera"
        android:contentDescription="@string/Camera"
        />

    <com.google.android.material.textfield.TextInputLayout
        android:layout_row="1"
        android:layout_column="0"
        android:layout_columnSpan="2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        >
        <EditText
            android:inputType="text"
            android:id="@+id/tagEditText"
            android:hint="@string/hint_tag"
            android:layout_width="match_parent"
            android:layout_height="match_parent" />
    </com.google.android.material.textfield.TextInputLayout>

    <!--    <Button-->
    <!--        android:id="@+id/galleryButtonText"-->
    <!--        android:layout_width="wrap_content"-->
    <!--        android:layout_height="wrap_content"-->
    <!--        android:layout_columnWeight="1"-->
    <!--        android:layout_row="2"-->
    <!--        android:layout_column="0"-->
    <!--        android:layout_columnSpan="1"-->
    <!--        android:gravity="center"-->
    <!--        android:textSize="@dimen/text_size_button"-->
    <!--        android:text="@string/button_text" />-->

    <Button
        android:id="@+id/galleryButtonPicture"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_row="2"
        android:layout_rowSpan="2"
        android:layout_column="1"
        android:layout_columnSpan="1"
        android:layout_columnWeight="1"
        android:gravity="center"
        android:text="@string/button_picture"
        android:textSize="@dimen/text_size_button" />

    <ImageView
        android:id="@+id/galleryImageView"
        android:layout_width="fill_parent"
        android:layout_height="400dp"
        android:layout_row="4"
        android:layout_columnSpan="2"
        android:layout_gravity="fill_vertical"
        android:contentDescription="@string/image_selected"
        />



</GridLayout>